@@ -1,8 +1,10 @@
 Revision history for Perl extension Padre::Plugin::PerlTidy.
 
 0.02  XXX
-    - Use Padre::PluginBuilder to allow the user to install the plugin
-      to their local dir (Steffen Mueller)
+    - Use Module::Install::PadrePlugin to allow the user to install the plugin
+      to their local dir
+    - instead of use() Perl::Tidy, require() when needed
+    - Update for the latest plugin system
 
 0.01  Thu Oct 23 2008
     - original version
